--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2194,6 +2194,10 @@ section h2 {
 }
 
 /* HIGH OR LOW ACTIVITY STYLES */
+#\31 _1_pitches > button:nth-child(2){
+  height:222px;
+}
+
 .high-low-choices {
   position: absolute;
   bottom: 15%;
@@ -2206,9 +2210,11 @@ section h2 {
 
 .high-choice,
 .low-choice {
-  width: 120px;
-  height: 90px;
-  border: 3px solid white;
+  width: 199px;
+  height: 290px;
+  position: relative;
+  top: -63px;
+  border: 0;
   border-radius: 15px;
   cursor: pointer;
   transition: all 0.2s ease;
@@ -2218,8 +2224,7 @@ section h2 {
   justify-content: center;
   font-size: 18px;
   font-weight: bold;
-  color: white;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+  color:transparent;
   background-color: transparent;
 }
 
