--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1269,7 +1269,7 @@ section h2 {
 }
 
 #\31 _2_pitches{
-  height: 152vw !important; 
+  height: 161vw !important; 
 }
 
 #\31 _3_pitches{
@@ -1397,7 +1397,7 @@ section h2 {
   bottom: 0.5rem;
   left: 50%;
   transform: translateX(-50%);
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 1rem;
   padding: 0.5rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
@@ -2300,21 +2300,20 @@ section h2 {
 
 /* Progress display for High or Low */
 .high-low-progress {
-  position: absolute;
-  bottom: 35px;
-  right: 20px;
-  background: rgba(255, 255, 255, 0.9);
+  position: fixed;
+  bottom: 5px;
+  background: rgba(255, 255, 255, 0.5);
   padding: 10px 15px;
   border-radius: 15px;
   font-size: 14px;
   color: #333;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   max-width: 353px;
-  height: 44px;}
+  height: 44px;
+}
 
 .high-low-progress p {
   margin: 2px 0;
-  font-weight: bold;
 }
 
 .bottom_round_edge {
