- fix 1_3 canvas position and button positions - disable chords, home buttons - make all buttons transparent

--- a/src/styles/clickable-map.css
+++ b/src/styles/clickable-map.css
@@ -129,9 +129,9 @@
 .clickable-area {
   position: absolute;
   cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0);
   transition: background-color 0.3s ease;
-  border-radius: 0;
+  border-radius: 10px;
 }
 
 .clickable-area:hover, .clickable-area:active {
