--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1398,6 +1398,8 @@ section h2 {
   max-height: min(999px, 163vw);
 }
 
+#\32 _5_chords_characters{
+}
 
 .activity-container h3 {
   color: var(--primary-color);
