2_5 fix position of play button on large screen
- strings replace \ with "" , because android needs them

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1426,7 +1426,8 @@ section h2 {
   height: min(40vw, 320px);
   background-color: #fff;
   border-radius: 20%;
-  margin-top: -26vw;
+  position:absolute;
+  top: 0px;
   margin-left: 40%;
 }
 
