--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1429,7 +1429,7 @@ section h2 {
   opacity: 0.05;
 }
 
-#button_2_5_1_happy, #button_2_5_1_sad, #button_2_5_1_surprised, #button_2_5_1_mysterious{
+#button_2_5_1_major, #button_2_5_1_minor, #button_2_5_1_augmented, #button_2_5_1_diminished{
   opacity: 0;
   position: absolute;
   top: min(47vw, 320px);
@@ -1441,20 +1441,20 @@ section h2 {
   color:transparent
 }
 
-#button_2_5_1_happy:hover, #button_2_5_1_sad:hover, #button_2_5_1_surprised:hover, #button_2_5_1_mysterious:hover{
+#button_2_5_1_major:hover, #button_2_5_1_minor:hover, #button_2_5_1_augmented:hover, #button_2_5_1_diminished:hover{
   opacity: 0.05;
 }
 
-#button_2_5_1_sad{
+#button_2_5_1_minor{
   left: min(37vw, 250px);
   width: min(37vw, 180px);
 }
 
-#button_2_5_1_surprised{
+#button_2_5_1_augmented{
   left: 70%;
 }
 
-#button_2_5_1_mysterious{
+#button_2_5_1_diminished{
   top: min(101vw, 600px);
   width: 100%;
 }
