add share button with translations and update company details in imprint
rename menu items and translate to german

referrals unlocked chords in green

settings all in german

Referrals Page Strings

--- a/public/partials/referrals.html
+++ b/public/partials/referrals.html
@@ -62,7 +62,7 @@
                 <strong><span x-text="$store.strings?.registrations || 'Registrations'"></span>:</strong>
                 <span x-text="referralCount || '0'"></span>/3
                 <template x-if="referralCount >= 3">
-                  <span class="referral-unlocked">✓ <span x-text="$store.strings?.chords_unlocked || 'Chords unlocked!'"></span></span>
+                  <span class="referral-unlocked" style="color: green;">✓ <span x-text="$store.strings?.chords_unlocked || 'Chords unlocked!'"></span></span>
                 </template>
               </p>
               <p class="referral-status">
