1_4: use doublebass on the right

--- a/src/styles/sound-judgment.css
+++ b/src/styles/sound-judgment.css
@@ -86,12 +86,12 @@
   background-color: transparent;
 }
 
-.tuba {
+.doublebass {
   background-color: transparent;
   border: 0;
 }
 
-.tuba:hover:not(.disabled) {
+.doublebass:hover:not(.disabled) {
   background-color: transparent;
 }
 
