--- a/src/styles/sound-judgment.css
+++ b/src/styles/sound-judgment.css
@@ -25,26 +25,27 @@
 
 /* Instrument Selection Buttons */
 .instrument-buttons {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 15px;
-  margin: 15px 0;
+  position: absolute;
+  width: min(65vw, 427px);
+  top: min(115px, 20vw);
+  color:transparent;
+  text-align: center;
+  font-size: 0; /* Removes whitespace between inline-block elements */
 }
 
 .instrument-button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 16vw;
+  display: inline-block;
+  vertical-align: top;
+  width: 33.33%;
   height: 27vw;
   border: none;
   border-radius: 12px;
   padding: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
+  box-sizing: border-box;
   transition: all 0.3s ease;
   cursor: pointer;
+  color:transparent;
+  text-align: center;
 }
 
 .instrument-button:hover {
@@ -135,6 +136,9 @@
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
+  margin-top: 8vw;
+  width: 90%;
+  height: 32vw;
 }
 
 .start-game-button:hover {
